<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">清单</string>
    <string name="all">全部</string>
    <string name="study">学习</string>
    <string name="life">生活</string>
    <string name="work">工作</string>
    <string name="to_delete">确定删除？</string>
    <string name="edit">编辑</string>
    <string name="create">新建</string>
    <string name="title">主题</string>
    <string name="details">从明天起，做一个幸福的人</string>
    <string name="confirm">确定</string>
    <string name="unfinished">未完成</string>
    <string name="finished">已完成</string>
    <string name="toast_unf_to_f">归入已完成</string>
    <string name="toast_f_to_unf">归入未完成</string>
    <string name="delete">已删除</string>
    <string name="subject_no_null">主题不能为空</string>
    <string name="dismiss">确定放弃？</string>
    <string name="sure">确定</string>
    <string name="exit">退出</string>
    <string name="letter">一封信</string>
    <string name="comment">评价</string>
    <string name="feedback">反馈</string>
    <string name="open_source">开源地址</string>
</resources>
