<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_title_height"
        android:hint="@string/title"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:maxLength="17"
        android:textSize="@dimen/list_content_text"

        android:background="@drawable/edit1"
        android:textColorHint="@color/label_text"
        android:textColor="@color/main_text_back"
        />

    <Button
        android:id="@+id/comfiem_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_button_height"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        android:background="@drawable/comfirm_button_bg_x"
        android:textColor="@color/main_text_back"
        />

    <EditText
        android:id="@+id/edit_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/details"
        android:layout_below="@+id/edit_title"
        android:layout_above="@+id/comfiem_button"
        android:layout_centerInParent="true"
        android:gravity="top"
        android:background="@drawable/edit1"
        android:textSize="@dimen/edit_details_text"
        android:textColor="@color/main_text_back"
        android:textColorHint="@color/label_text"
        />


    </RelativeLayout>
